--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang =en>
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,13 +7,6 @@
 <title>assignment 1</title>
 <link href="styles.css" rel="stylesheet">
 </head>
-<style>
-  .grid-container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 5px;
-  }
-</style>
 <body>
     
 <div class="grid-container">
